@@ -30,3 +30,19 @@ src/glassplayer/metaevent.cpp
 src/glassplayer/metaevent.h
 src/glassplayer/ringbuffer.cpp
 src/glassplayer/ringbuffer.h
+src/glassplayergui/audiodevice.cpp
+src/glassplayergui/audiodevice.h
+src/glassplayergui/cmdswitch.cpp
+src/glassplayergui/cmdswitch.h
+src/glassplayergui/codec.cpp
+src/glassplayergui/codec.h
+src/glassplayergui/connector.cpp
+src/glassplayergui/connector.h
+src/glassplayergui/glasslimits.h
+src/glassplayergui/glassplayergui
+src/glassplayergui/logging.cpp
+src/glassplayergui/logging.h
+src/glassplayergui/metaevent.cpp
+src/glassplayergui/metaevent.h
+src/glassplayergui/ringbuffer.cpp
+src/glassplayergui/ringbuffer.h
