@@ -1,0 +1,68 @@
+## automake.am
+##
+## Makefile for the glassplayergui(1) Audio Player front-end.
+##
+## (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
+##
+##   This program is free software; you can redistribute it and/or modify
+##   it under the terms of the GNU General Public License version 2 as
+##   published by the Free Software Foundation.
+##
+##   This program is distributed in the hope that it will be useful,
+##   but WITHOUT ANY WARRANTY; without even the implied warranty of
+##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+##   GNU General Public License for more details.
+##
+##   You should have received a copy of the GNU General Public
+##   License along with this program; if not, write to the Free Software
+##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+##
+##
+## Use automake to process this into a Makefile.in
+
+AM_CPPFLAGS = -Wall -DPREFIX=\"$(prefix)\" -Wno-strict-aliasing @QT4_CFLAGS@ @SNDFILE_CFLAGS@ @ALSA_CFLAGS@
+MOC = @QT4_MOC@
+
+# The dependency for qt's Meta Object Compiler (moc)
+moc_%.cpp:	%.h
+	@MOC@ $< -o $@
+
+
+bin_PROGRAMS = glassplayergui
+
+dist_glassplayergui_SOURCES = glassplayergui.cpp glassplayergui.h
+
+nodist_glassplayergui_SOURCES = audiodevice.cpp audiodevice.h\
+                                cmdswitch.cpp cmdswitch.h\
+                                codec.cpp codec.h\
+                                connector.cpp connector.h\
+                                glasslimits.h\
+                                logging.cpp logging.h\
+                                metaevent.cpp metaevent.h\
+                                moc_audiodevice.cpp\
+                                moc_codec.cpp\
+                                moc_connector.cpp\
+                                moc_glassplayergui.cpp\
+                                ringbuffer.cpp ringbuffer.h
+
+glassplayergui_LDADD = @GUILIBS@
+glassplayergui_LDFLAGS = @GUIFLAGS@
+
+CLEANFILES = *~\
+             moc_*\
+             *.obj\
+             *.idb\
+             *.pdb\
+             *ilk
+
+DISTCLEANFILES = audiodevice.cpp audiodevice.h\
+                 cmdswitch.cpp cmdswitch.h\
+                 codec.cpp codec.h\
+                 connector.cpp connector.h\
+                 glasslimits.h\
+                 logging.cpp logging.h\
+                 metaevent.cpp metaevent.h\
+                 ringbuffer.cpp ringbuffer.h
+
+MAINTAINERCLEANFILES = *~\
+                       Makefile.in
