@@ -1,0 +1,54 @@
+// glassplayergui.h
+//
+// glassplayergui(1) Audio Receiver front end
+//
+//   (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
+//
+//   This program is free software; you can redistribute it and/or modify
+//   it under the terms of the GNU General Public License version 2 as
+//   published by the Free Software Foundation.
+//
+//   This program is distributed in the hope that it will be useful,
+//   but WITHOUT ANY WARRANTY; without even the implied warranty of
+//   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//   GNU General Public License for more details.
+//
+//   You should have received a copy of the GNU General Public
+//   License along with this program; if not, write to the Free Software
+//   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+//
+
+#ifndef GLASSGUIPLAYER_H
+#define GLASSGUIPLAYER_H
+
+#include <QMainWindow>
+#include <QProcess>
+
+#define GLASSPLAYERGUI_USAGE "[options]\n"
+
+class MainWidget : public QMainWindow
+{
+ Q_OBJECT;
+ public:
+  MainWidget(QWidget *parent=0);
+  QSize sizeHint() const;
+
+ private slots:
+  void processStart(const QString &url);
+  void processReadyReadData();
+  void processFinishedData(int exit_code,QProcess::ExitStatus status);
+  void processErrorData(QProcess::ProcessError err);
+
+ protected:
+  void closeEvent(QCloseEvent *e);
+  void resizeEvent(QResizeEvent *e);
+
+ private:
+  void ProcessStats(const QString &str);
+  QProcess *gui_process;
+  QString gui_stats_buffer;
+  QString gui_url;
+};
+
+
+#endif  // GLASSPLAYERGUI_H
