@@ -188,3 +188,5 @@
 	'/etc/glassplayer.conf' and '$HOME/glassplayerrc'.
 2016-02-10 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.6.3.
+2016-02-11 Fred Gleason <fredg@paravelsystems.com>
+	* Stubbed out a glassplayergui(1) applet in 'src/glassplayergui/'.
